# RealPython

./: README.md
PDF_Manipulation/: PROJECTS.md  pyproject.toml
PDF_Manipulation/pdfs/: lekan_texts.txt
PDF_Manipulation/src/: create_toc__pdf.py  encrypt_pdf.py  exercise1.py  main.py  merger.py  rotate_pdf.py  using_reportlab.py  write_random.py  writer.py
